--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 
-REACT_APP_API_BASE=http://localhost:4000/api
+# REACT_APP_API_BASE=http://localhost:4000/api
+REACT_APP_API_BASE=https://snnew10.vercel.app/api
 
